feat(message): 添加群组操作处理功能并优化消息处理流程
- 新增 GroupOperationProcess 类处理群组操作消息
- 在 MessageHandler 中注册群组操作消息处理器
- 调整消息分发顺序，优化代码结构
- 更新群成员服务接口，新增角色查询、批量修改等功能
- 优化数据库服务中的查询方法命名规范
- 临时注释网关中的签名验证和IP黑名单过滤器
- 增强聊天控制器参数验证功能
- 完善聊天DTO验证规则和字段约束